--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "version": "4.0.0",
+  "version": "1.0.0",
   "private": true,
+  "name": "custom-material-ui-date-picker",
   "description": "Material-ui pickers root package",
   "main": "index.js",
   "directories": {
